@@ -224,7 +224,16 @@
 <!ENTITY pr-indent "<link linkend='pr-indent'><varname>CUSTOM:*PRINT-INDENT-LISTS*</varname></link>">
 <!ENTITY pr-rpars "<link linkend='pr-rpars'><varname>CUSTOM:*PRINT-RPARS*</varname></link>">
 <!ENTITY probe-dir "<link linkend='probe-dir'><function>EXT:PROBE-DIRECTORY</function></link>">
-<!ENTITY prompt "<link linkend='prompt'><varname>CUSTOM:*PROMPT*</varname></link>">
+<!ENTITY prompt-start "<link linkend='prompt-start'><varname>CUSTOM:*PROMPT-START*</varname></link>">
+<!ENTITY prompt-step "<link linkend='prompt-step'><varname>CUSTOM:*PROMPT-STEP*</varname></link>">
+<!ENTITY prompt-break "<link linkend='prompt-break'><varname>CUSTOM:*PROMPT-BREAK*</varname></link>">
+<!ENTITY prompt-body "<link linkend='prompt-body'><varname>CUSTOM:*PROMPT-BODY*</varname></link>">
+<!ENTITY prompt-finish "<link linkend='prompt-finish'><varname>CUSTOM:*PROMPT-FINISH*</varname></link>">
+<!ENTITY prompt-new-package "<link linkend='prompt-new-package'><function>EXT:PROMPT-NEW-PACKAGE</function></link>">
+<!ENTITY package-short-name "<link linkend='package-short-name'><function>EXT:PACKAGE-SHORT-NAME</function></link>">
+<!ENTITY command-index "<link linkend='command-index'><varname>EXT:*COMMAND-INDEX*</varname></link>">
+<!ENTITY break-level "<link linkend='break-level'><function>EXT:BREAK-LEVEL</function></link>">
+<!ENTITY step-level "<link linkend='step-level'><function>EXT:STEP-LEVEL</function></link>">
 <!ENTITY rbla "<link linkend='rbla'><function>EXT:READ-BYTE-LOOKAHEAD</function></link>">
 <!ENTITY rbnh "<link linkend='rbnh'><function>EXT:READ-BYTE-NO-HANG</function></link>">
 <!ENTITY rbwhp "<link linkend='rbwhp'><function>EXT:READ-BYTE-WILL-HANG-P</function></link>">
